@@ -1,0 +1,30 @@
+<?php
+/**
+* Smarty PHPunit tests of modifier
+* 
+* @package PHPunit
+* @author Rodney Rehm 
+*/
+
+/**
+* class for modifier tests
+*/
+class PluginFunctionFetchTests extends PHPUnit_Framework_TestCase {
+    public function setUp()
+    {
+        $this->smarty = SmartyTests::$smarty;
+        SmartyTests::init();
+    } 
+    
+    public static function isRunnable()
+    {
+        return true;
+    }
+
+    public function testTodo()
+    {
+        // TODO: UnitTests for {fetch}
+    }
+} 
+
+?>
